<resources>

    <string name="app_name">duelp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prev_month">&lt;&lt;</string>
    <string name="next_month">&gt;&gt;</string>
    <string name="content_home">Hier geht es bei mir zu Hause</string>
    <string name="content_busy">Hier kann ich nicht</string>
    <string name="content_trash">Eintrag löschen</string>
    <string name="content_termine_list">Zeige Termine als Liste</string>
    <string name="back">Zurück</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="offline">Offline</string>
    <string name="exit_app">Beenden</string>
    <string name="unregister_user">Account loeschen</string>
    <string name="register">Registrieren</string>
    <string name="cancel">Abbrechen</string>
    <string name="strasse">Strasse</string>
    <string name="hnr">Nr</string>
    <string name="plz">PLZ</string>
    <string name="ort">Ort</string>
    <string name="hdRegister">DUELP Register</string>
    <string name="hdLogin">DUELP Login</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="adress">Adresse</string>
    <string name="start_routing">Routing Starten</string>
    <string name="toggle_map">Kartentyp wechseln</string>

    
	<color name="white">#ffffff</color>
	<string name="open">Open</string>
	<string-array name="strArr_weekdays">
		<item >Mo</item>
		<item >Di</item>
		<item >Mi</item>
		<item >Do</item>
		<item >Fr</item>
		<item >Sa</item>
		<item >So</item>
	</string-array>

</resources>