<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FF99CC00"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/hdRegister"
	    android:textSize="8pt"
	    android:textStyle="bold"
	    android:textColor="@color/white" />

    <EditText
        android:id="@+id/usernameReg"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username" />
    
    <EditText
        android:id="@+id/passwordReg"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" >

	    <EditText
	        android:id="@+id/strasseReg"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".7"
	        android:hint="@string/strasse" />
	    
	    <EditText
	        android:id="@+id/hnrReg"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".3"
	        android:hint="@string/hnr" />
    
    </LinearLayout>
    
    <EditText
        android:id="@+id/plzReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plz" />
    
    <EditText
        android:id="@+id/ortReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ort" />

</LinearLayout>